# Paraiba-Hot-Dog-Back

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.yml  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  sonar-project.properties  sonar_metrics.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  develop_service-amis.yml  lint.yml  push-sonar-metrics.yaml  sonar-build.yml  tests.yml
Docker/: Dockerfile
app/: main.py
app/core/: database.py
app/models/: __init__.py  adicional.py  categoria.py  cliente.py  endereco.py  forma_pagamento.py  item_pedido.py  mesa.py  pedido.py  pedido_pagamento.py  permissoes.py  product.py  produto.py  produto_variacao.py  subcategoria.py  unidade.py  user.py  usuario.py
app/repositories/: produtos.py  usuarios.py
app/schemas/: __init__.py  adicional.py  categoria.py  cliente.py  endereco.py  forma_pagamento.py  item_pedido.py  mesa.py  pedido.py  pedido_pagamento.py  product.py  produto.py  produto_variacao.py  subcategoria.py  (+3 more)
keycloak/: Dockerfile  paraiba-hotdog-realm.json
migrations/: env.py  script.py.mako
scripts/: keycloak-token.sh  reset_seed.py  run-integration-tests.sh  run-tests.sh  seed.py
src/: config.py  conftest.py  database.py  email_service.py  jwt_auth.py  keycloak_admin.py  main.py  security.py  seed_router.py  test_email_service.py  test_keycloak_admin.py  test_repositories_coverage.py  test_security.py  whatsapp_boas_vindas.py
tests/: conftest.py  test_cardapio.py
(+130 files in other folders)
